glitch fix[Guide.js]: beta line doesn't wrap for small screens

--- a/FrontEnd/src/pages/Guide/Guide.css
+++ b/FrontEnd/src/pages/Guide/Guide.css
@@ -1,7 +1,7 @@
 .centered {
   justify-content: center;
   display: flex;
-  white-space: nowrap; 
+  white-space: initial; 
 }
 
 .centered i {
